--- a/package.json
+++ b/package.json
@@ -1,56 +1,75 @@
 {
-  "name": "acm-octane-base",
-  "version": "0.0.0",
-  "private": true,
-  "description": "Small description for acm-octane-base goes here",
-  "repository": "",
-  "license": "MIT",
-  "author": "",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
-  "scripts": {
-    "build": "ember build",
-    "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
-    "start": "ember serve",
-    "test": "ember test"
-  },
-  "devDependencies": {
-    "@ember/optional-features": "^1.1.0",
-    "@glimmer/component": "^1.0.0",
-    "babel-eslint": "^10.0.3",
-    "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.3",
-    "ember-cli": "~3.15.2",
-    "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.13.0",
-    "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^4.2.0",
-    "ember-cli-inject-live-reload": "^2.0.1",
-    "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
-    "ember-cli-uglify": "^3.0.0",
-    "ember-data": "~3.15.0",
-    "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^7.0.0",
-    "ember-load-initializers": "^2.1.1",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.6.0",
-    "ember-resolver": "^7.0.0",
-    "ember-source": "~3.15.0",
-    "ember-welcome-page": "^4.0.0",
-    "eslint-plugin-ember": "^7.7.1",
-    "eslint-plugin-node": "^10.0.0",
-    "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.2"
-  },
-  "engines": {
-    "node": "8.* || >= 10.*"
-  },
-  "ember": {
-    "edition": "octane"
-  }
+    "author": "Isaac J. Lee",
+    "name": "acm-octane-base",
+    "description": "Ember Octane workshop for Austin Code Mentorship",
+    "keywords": [
+        "Ember",
+        "Ember.js",
+        "Ember CLI Mirage",
+        "Ember CLI Sass",
+        "Ember CSS Modules",
+        "Ember Octane"
+    ],
+    "version": "0.0.0",
+    "private": true,
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ijlee2/acm-octane-workshop"
+    },
+    "license": "MIT",
+    "directories": {
+        "doc": "doc",
+        "test": "tests"
+    },
+    "scripts": {
+        "build": "ember build",
+        "lint:hbs": "ember-template-lint .",
+        "lint:js": "eslint .",
+        "start": "ember serve",
+        "test": "ember test"
+    },
+    "devDependencies": {
+        "@ember/optional-features": "^1.1.0",
+        "@glimmer/component": "^1.0.0",
+        "babel-eslint": "^10.0.3",
+        "broccoli-asset-rev": "^3.0.0",
+        "ember-auto-import": "^1.5.3",
+        "ember-cli": "~3.15.2",
+        "ember-cli-app-version": "^3.2.0",
+        "ember-cli-babel": "^7.13.0",
+        "ember-cli-dependency-checker": "^3.2.0",
+        "ember-cli-eslint": "^5.1.0",
+        "ember-cli-htmlbars": "^4.2.0",
+        "ember-cli-inject-live-reload": "^2.0.1",
+        "ember-cli-mirage": "^1.1.6",
+        "ember-cli-sass": "^10.0.1",
+        "ember-cli-sri": "^2.1.1",
+        "ember-cli-template-lint": "^1.0.0-beta.3",
+        "ember-cli-uglify": "^3.0.0",
+        "ember-css-modules": "^1.2.1",
+        "ember-css-modules-sass": "^1.0.1",
+        "ember-data": "~3.15.0",
+        "ember-export-application-global": "^2.0.1",
+        "ember-fetch": "^7.0.0",
+        "ember-load-initializers": "^2.1.1",
+        "ember-maybe-import-regenerator": "^0.1.6",
+        "ember-qunit": "^4.6.0",
+        "ember-resolver": "^7.0.0",
+        "ember-source": "~3.15.0",
+        "eslint-plugin-ember": "^7.7.1",
+        "eslint-plugin-node": "^10.0.0",
+        "faker": "^4.1.0",
+        "loader.js": "^4.7.0",
+        "qunit-dom": "^0.9.2"
+    },
+    "engines": {
+        "node": "8.* || >= 10.*"
+    },
+    "ember": {
+        "edition": "octane"
+    },
+    "dependencies": {
+        "node-sass": "^4.13.1",
+        "postcss-nested": "^4.2.1"
+    }
 }
